Alignment Fix for deploymentDetails page (#1218)

--- a/src/components/pages/deployments/deploymentDetails/deploymentDetails.scss
+++ b/src/components/pages/deployments/deploymentDetails/deploymentDetails.scss
@@ -30,9 +30,7 @@
     .summary-container-columns {
       justify-content: space-around;
       white-space: nowrap;
-      overflow: hidden;
       text-overflow: ellipsis;
-      @include rem-fallback(height, 50px);
       @include rem-fallback(width, 200px);
      }
 
