--- a/src/components/pages/deployments/deploymentsHome/flyouts/deploymentNew/deploymentNew.scss
+++ b/src/components/pages/deployments/deploymentsHome/flyouts/deploymentNew/deploymentNew.scss
@@ -46,8 +46,7 @@
 
     .new-deployment-success-labels { color: themed('colorFlyoutText'); }
 
-    .new-deployment-detail-page-link,
-    .new-deployment-info-text, { color: themed('colorContentText'); }
+    .new-deployment-info-text { color: themed('colorContentText'); }
 
     .new-deployment-info-star { color: themed('colorAlert'); }
   }
